trying to stop overflow on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -183,8 +183,15 @@ button{
 
 body {
   background-color: $background-color;
-  overflow: hidden;
   @include small {
     width: 441px;
+    margin: 0px;
+  }
+}
+
+#wrapper {
+  @include small {
+    max-width:441px;
+    overflow-x:hidden;
   }
 }
